# django-books

./: .gitignore  LICENSE  MANIFEST.in  README.md  django-books.qwc  requirements.txt  response.xml  setup.cfg
django_books/: admin.py  apps.py  django-books.qwc  models.py  settings.py  urls.py  views.py
django_books/migrations/: 0001_initial.py  0002_initial.py  0002_serviceaccount_file_path.py  0002_serviceaccount_password.py  0003_alter_serviceaccount_file_path.py  0003_ticketqueue.py  0004_alter_ticketqueue_ticket.py  0004_serviceaccount_is_active_ticketqueue_resolved_and_more.py  0005_alter_ticketqueue_ticket.py  0006_remove_ticketqueue_ticket.py  0007_ticketqueue_ticket.py  0008_alter_ticketqueue_method.py  0009_serviceaccount_config.py  0010_alter_serviceaccount_config.py  0011_serviceaccount_app_url.py
django_books/objects/: objects.py  process_query.py
django_books/templates/django_books/: support.html
examples/customer/: customer-test-books.qwc  manage.py
examples/customer/customer/: asgi.py  settings.py  urls.py  wsgi.py
examples/customer/customers/: models.py
examples/customer/qbwc/: apps.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
examples/customer/qbwc/migrations/: 0001_initial.py  0002_alter_customer_managers.py  0003_customer__batch_id_customer__batch_status_and_more.py  (+1 more)
examples/expense/: expense.qwc  expenses-test-books.qwc  manage.py
examples/expense/expense/: asgi.py  settings.py  urls.py  wsgi.py
examples/expense/expenses/: models.py
examples/expense/qbwc/: settings.py  urls.py
tests/: process_query.py
