[metadata]
name = django-books
version = 0.0.3
author = Bill Ash 
author_email = bill@overco.net
description = QuickBooks Desktop WebConnector Djano App
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/bill-ash/django-books
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules


[options]
include_package_data = true
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools >= 38.3.0

install_requires =
    Django>=4.0.0
    lxml>=4.8.0
    spyne>=2.14.0